--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Login</title>
+    <title>{% block metaTitle %}Login{% endblock %}</title>
 
     <link href="/bundles/maallsadmin/css/bootstrap.min.css" rel="stylesheet">
     <link href="/bundles/maallsadmin/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -42,9 +42,13 @@
                 {% endif %}
                 <input type="submit" class="btn btn-primary block full-width m-b" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 
-                <a href="#"><small>Forgot password?</small></a>
-                <p class="text-muted text-center"><small>Do not have an account?</small></p>
-                <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
+                {% block forgot %}
+                    <a href="#"><small>Forgot password?</small></a>
+                {% endblock %}
+                {% block register %}
+                    <p class="text-muted text-center"><small>Do not have an account?</small></p>
+                    <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
+                {% endblock %}
             </form>
             
         </div>
