--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -1,65 +1,4 @@
-{% trans_default_domain 'FOSUserBundle' %}
-<!DOCTYPE html>
-<html>
+{% extends 'MaallsAdminUserBundle::Security/login.base.html.twig' %}
+{% block above_email_login %}
 
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>{% block metaTitle %}Login{% endblock %}</title>
-
-    <link href="/bundles/maallsadmin/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/bundles/maallsadmin/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="/bundles/maallsadmin/css/animate.css" rel="stylesheet">
-    <link href="/bundles/maallsadmin/css/style.css" rel="stylesheet">
-
-</head>
-
-<body class="gray-bg">
-    
-    <div class="middle-box text-center loginscreen  animated fadeInDown">
-        <div>
-            <div>
-
-                <h1 class="logo-name">{{ 'security.login.logo' | trans }}</h1>
-
-            </div>
-            <h3>{{ 'security.login.title' | trans }}</h3>
-            
-            <form class="m-t" role="form" action="{{ path("fos_user_security_check") }}" method="post">
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="{{ 'security.login.username'|trans }}" id="username" name="_username" value="{{ last_username }}" required="required" />
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" placeholder="{{ 'security.login.password'|trans }}" id="password" name="_password" required="required" />
-                </div>
-
-                {% if error %}
-                    <p class="bg-danger">{{ error|trans }}</p>
-                {% endif %}
-                <input type="submit" class="btn btn-primary block full-width m-b" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-
-                {% block forgot %}
-                    <a href="#"><small>Forgot password?</small></a>
-                {% endblock %}
-                {% block register %}
-                    <p class="text-muted text-center"><small>Do not have an account?</small></p>
-                    <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
-                {% endblock %}
-            </form>
-            
-        </div>
-    </div>
-
-
-
-    <!-- Mainly scripts -->
-    <script src="/bundles/maallsadmin/js/jquery-2.1.1.js"></script>
-    <script src="/bundles/maallsadmin/js/bootstrap.min.js"></script>
-
-</body>
-
-</html>
+{% endblock %}
